--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,25 @@
-<% if logged_in? %>
-<h1><%= current_user.username %>'s Events</h1> 
-<p><% current_user_events.each_entry do |entry| %>
+
+<h1><%= @user.username %>'s Events</h1> 
+
+<p>hosting: <% @current_hosted_events.each_entry do |entry| %>
 	<li><%= entry.title %></li>
 	<%end%>
 </p>
+<p>attending: 
 
+<% @current_attended_events.each_entry do |event| %>
+<li><%= event.title %></li>
 <%end%>
+</p>
+
+<p>hosted: <% @past_hosted_events.each_entry do |entry| %>
+	<li><%= entry.title %></li>
+	<%end%>
+</p>
+<p>attended: 
+
+<% @past_attended_events.each_entry do |event| %>
+<li><%= event.title %></li>
+<%end%>
+</p>
+
